syntax = "proto3";

option go_package = "github.com/yarinBenisty/birthday-service/proto/birthday.proto";

package birthday;

service BirthdayFunctions {
  // CreateBirthday creates a new birthday if it doesn't exist.
  // and if it does, its overwriting it
  rpc CreateBirthday(CreateBirthdayRequest) returns (BirthdayObject) {}

  // GetBirthday returns the selected birthday using personalNumber parameter.
  rpc GetBirthday(GetBirthdayRequest) returns (BirthdayObject) {}

  // GetAllBirthday returns all birthdays.
  rpc GetAllBirthdays(GetAllBirthdaysRequest) returns (GetAllBirthdaysResponse) {}

  // DeleteBirthday deletes the selected birthday.
  rpc DeleteBirthday(DeleteBirthdayRequest) returns (DeleteBirthdayResponse) {}
}

message CreateBirthdayRequest {
  // The name of The person
  string name = 1;

  // The date of birth of the person
  //represented by: 'day/month/year'
  string date = 2;

  // The identification number of the person
  string personalNumber = 3;
}

message DeleteBirthdayResponse {}

message GetBirthdayRequest {
  // The identification number of the person
  string personalNumber = 1;
}

message GetAllBirthdaysRequest {}

message DeleteBirthdayRequest {
  // The identification number of the person
  string personalNumber = 1;
}

message BirthdayObject {
  // The name of the person
  string name = 1;

  // The date of birth of the person
  string date = 2;

  // The identification number of the person
  string personalNumber = 3;

  // The unique id that's created for the person
  string ID = 4;
}

message GetAllBirthdaysResponse { 
  repeated BirthdayObject birthdays = 1;
}
